--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio AutoU Email</title>
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
+    <script src="{{ url_for('static', filename='JS/main.js') }}" defer></script>
 </head>
 <body>
     <header class="header">
@@ -57,6 +58,5 @@
     <footer class="rodape">
             <p>Desenvolvido por Kayke Ragoso | Processo Seletivo <a href="https://www.autou.io/">AutoU</a></p>
     </footer>
-    <script src="JS/main.js"></script>
 </body>
 </html>
