--- a/Templates/index.html
+++ b/Templates/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="header">
-        <h1>Classificador de Emails Por IA (Desafio AutoU)</h1>
+        <h1>Categorizador de Emails Por IA (Desafio AutoU)</h1>
     </header>
 
     <main class="container">
