--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio AutoU Email</title>
+    <title>Desafio AutoU - Kayke Ragoso</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
     <script src="{{ url_for('static', filename='JS/main.js') }}" defer></script>
 </head>
