--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio AutoU - Kayke Ragoso</title>
+    <title>Categorizador Inteligente de Emails</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
     <script src="{{ url_for('static', filename='JS/main.js') }}" defer></script>
 </head>
 <body>
     <header class="header">
-        <h1>Categorizador de Emails Por IA (Desafio AutoU)</h1>
+        <h1>Categorizador Inteligente de Emails</h1>
     </header>
 
     <main class="container">
@@ -66,8 +66,8 @@
 
     <footer class="rodape">
         <p>
-            Desenvolvido por Kayke Ragoso | Processo Seletivo
-            <a href="https://www.autou.io/">AutoU</a>
+            Desenvolvido por Kayke Ragoso | Dev Fullstack
+            <a href="https://github.com/KaykeRagoso">GitHub</a>
         </p>
     </footer>
 
